# ProjectWolfGame

./: .gitignore  CMakeLists.txt  Common.props  DebugLog.txt  LICENSE.md  ProjectWolfGame.sln  ProjectWolfGame.vcxproj  ProjectWolfGame.vcxproj.filters  README.md  test.cpp
Create/: Create.vcxproj  Create.vcxproj.filters
Create/include/: Create.h  Create_Enums.h
Create/src/: Create.cpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  ReadMe.txt  dllmain.cpp
Engine/Create/: Create.cpp  Create.h  CreateData.h  Createable.h  Registration.h
Engine/Creation/: Creatable.h  CreatableClassDeclarations.h  Create.cpp  Create.h  CreateData.cpp  CreateData.h  Createable.h  Registration.cpp  Registration.h
Engine/Entity/: Actor.cpp  Actor.h  Creature.cpp  Creature.h  Equipment.cpp  Equipment.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Player.cpp  Player.h  Stats.cpp  Stats.h
Engine/Map/: Create.cpp  Dir.cpp  Dir.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  Node.cpp  Node.h
Engine/UI/: Input.cpp  Input.h
Entity/: Entity.h  Entity.vcxproj  Entity.vcxproj.filters
Entity/include/: Actor.h  Creature.h  Dir.h  Equipment.h  Inventory.h  Item.h  Player.h  Stats.h
Entity/include/Map/: Map.h  MapManager.h  Node.h
Entity/src/: Actor.cpp  Creature.cpp  Inventory.cpp  Player.cpp
Entity/src/Map/: Map.cpp  MapManager.cpp  Node.cpp
Game/: Game.vcxproj  Game.vcxproj.filters
Game/include/: Game.h
Game/include/GActors/: Rat.h  Swordsmen.h
Game/include/GMaps/: CenterTown.h
Game/include/GObjects/: BasicSword.h  HealingWand.h
Game/include/GTiles/: House_2Story.h
Game/src/GObjects/: BasicSword.cpp
ProjectWolfGame/: CMakeLists.txt  Factory.cpp  ProjectWolfGame.vcxproj  ProjectWolfGame.vcxproj.filters
ProjectWolfGame/GMaps/: CenterTown.cpp
ProjectWolfGame/Objects/: Inventory.cpp  Player.cpp
ProjectWolfGame/include/: Create.h  Dir.h  Factory.h  input.h
ProjectWolfGame/include/File/: File.h
ProjectWolfGame/include/GObjects/: BasicSword.h  CenterTown.h  HealingWand.h  House_2Story.h  Rat.h
ProjectWolfGame/include/GTiles/: House_2Story.h
ProjectWolfGame/include/Map/: Map.h  MapManager.h  Node.h
ProjectWolfGame/include/Objects/: Actor.h  Creature.h  Equipment.h  Inventory.h  Item.h  Stats.h
ProjectWolfGame/src/: Create.cpp  Dir.cpp  Factory.cpp  dLog.cpp  main.cpp  utils.cpp
ProjectWolfGame/src/Engine/: Create.cpp
ProjectWolfGame/src/Engine/Map/: MapManager.cpp  Node.cpp
ProjectWolfGame/src/Engine/Objects/: Creature.cpp  Item.cpp
ProjectWolfGame/src/GActors/: Rat.cpp
ProjectWolfGame/src/GMap/: CenterTown.cpp  House_2Story.cpp
ProjectWolfGame/src/GMaps/: CenterTown.cpp
ProjectWolfGame/src/GObjects/: BasicSword.cpp  Swordsmen.cpp
ProjectWolfGame/src/Game/: main.cpp
ProjectWolfGame/src/Game/Actors/: Player.cpp  Player.h  Rat.cpp  Swordsmen.cpp
ProjectWolfGame/src/Game/Items/: BasicSword.cpp  HealingWand.cpp
ProjectWolfGame/src/Game/Maps/: CenterTown.cpp  House_2Story.cpp
ProjectWolfGame/src/Map/: Map.cpp  MapManager.cpp  Node.cpp
ProjectWolfGame/src/Objects/: Actor.cpp  Creature.cpp  Inventory.cpp  Item.cpp  Player.cpp  Stats.cpp
ProjectWolfGame/test/File/: SavableTest.cpp
ProjectWolfGame/test/Objects/: StatsTest.cpp
Savable/: CMakeLists.txt  Savable.cpp  Savable.h  Savable.vcxproj  Savable.vcxproj.filters
UnitTests/: CMakeLists.txt  ItemTest.cpp  RegistrationTest.cpp  SavableTest.cpp  Source.cpp  StatsTest.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
UnitTests/EngineTest/: CreateTest.cpp  ItemTest.cpp  RegistrationTest.cpp  StatsTest.cpp
UnitTests/EngineTest/MapTest/: MapTest.cpp  NodeTest.cpp
compat/: conio.h  win_compat.h
include/: Dir.h  Factory.h  Factory_Enums.h  File.h  GameFiles.h  dLog.h  utils.h
include/Enums/: MapEnum.h  NodeEnum.h
include/File/: Savable.h
include/GActors/: Rat.h  Swordsmen.h
include/GMaps/: CenterTown.h
include/GObjects/: BasicSword.h  HealingWand.h  Item_BasicSword.h
include/GTiles/: House_2Story.h
include/Map/: Map.h  MapManager.h  Node.h  NodeData.h
include/Objects/: Actor.h  Creature.h  Creature_Interface.h  Equipment.h  Inventory.h  Item.h  Player.h  Stats.h
src/: Dir.cpp  Factory.cpp  File.cpp  main.cpp  utils.cpp
src/File/: File.cpp  Savable.cpp
src/GActors/: Rat.cpp  Swordsmen.cpp
src/GMaps/: CenterTown.cpp
src/GObjects/: BasicSword.cpp  Item_BasicSword.cpp
src/GTiles/: House_2Story.cpp
src/Map/: Map.cpp  MapManager.cpp  Node.cpp  NodeData.cpp
src/Objects/: Actor.cpp  Creature.cpp  Equipment.cpp  Inventory.cpp  Item.cpp  Player.cpp  Stats.cpp
test/: Test.h  test.cpp
test/File/: SavableTest.cpp
test/Objects/: ItemTest.cpp  StatsTest.cpp  Stats_Test.cpp
